test/checker/pass/check_yield_in_async.ms
const foo := async proc () { yield 42; };
