test/checker/fail/check_yield_outside_async.ms
val foo := proc () { yield 42 };
